/* --- Navigation Menu ------------------------------ */ /* overlay */ .overlay {   position: fixed;   z-index: 9;   top: 0;   left: 0;   width: 100vw;   height: 100vh;   background-color: rgba(0,0,0,0.7);   transform: translateX(-100vw); }

--- a/style.css
+++ b/style.css
@@ -20,7 +20,18 @@
     font-size: 15px;
   }
 
-
+/* --- Navigation Menu ------------------------------ */
+/* overlay */
+.overlay {
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+    transform: translateX(-100vw);
+  }
 
 
 
